# 22203_ovsyannikov

./: README.md  Source1.cpp
C++ OOP/lab3/: level.h
Java OOP/another_lab3_instance/: build.gradle  readme.txt  settings.gradle
Java OOP/broken_client_server_lab3/: reame.txt
Java OOP/lab1/: build.gradle  readme.txt
Java OOP/lab2/: readme.txt
Java OOP/lab3/: readme.txt  settings.gradle
MIPT C++ Lectures/: readme.txt  Лекция 1.md  Лекция 2.md  Лекция 3.md
Operating Systems/1.2/: hello_from_static_lib.c  readme.txt
Operating Systems/1.3/: hello_from_shared_lib.c  readme.txt
Operating Systems/1.4/: hello4.c  hello_from_shared_dyn_lib.c  hello_from_shared_dyn_lib.h  readme.txt
Operating Systems/lab3/: lab3.c  readme.txt
Operating Systems/lab4/: 1ab.c  1d.c  1e.c  1g.c  readme.txt
Operating Systems/lab5/: 1.c  readme.txt
homeWorks/: strings.cpp
lab1/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  hashtab.cpp
lab2/: Bigger.cpp  Bigger.h  CMakeLists.txt  Command.cpp  Command.h  Cr.cpp  Cr.h  Div.cpp  Div.h  Dot.cpp  Dot.h  Drop.cpp  Drop.h  Dup.cpp  Dup.h  Emit.cpp  Emit.h  Equal.cpp  Equal.h  Factory.h  If.cpp  If.h  Interpreter.cpp  Interpreter.h  Less.cpp  Less.h  Loop.cpp  Loop.h  Mod.cpp  Mod.h  Mul.cpp  Mul.h  Operands.cpp  Over.cpp  Over.h  Reader.h  Rot.cpp  Rot.h  StringOutput.cpp  StringOutput.h  (+10 more)
lab3/: CMakeLists.txt  leaderboard.cpp  leaderboard.h  leaderboard.ui  level.cpp  level.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  view.cpp  view.h  widget.cpp  widget.h  widget.ui  winwidget.cpp  winwidget.h  winwidget.ui
(+61 files in other folders)
